--- a/Src/Core/OnlineShop.Application/OnlineShop.Application.csproj
+++ b/Src/Core/OnlineShop.Application/OnlineShop.Application.csproj
@@ -11,7 +11,12 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Common\OnlineShop.Common\OnlineShop.Common.csproj" />
       <ProjectReference Include="..\OnlineShop.Domain\OnlineShop.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Services\Users\Commands\" />
     </ItemGroup>
 
 </Project>
